# LandLordGames

./: BgmControl.cpp  BgmControl.h  CMakeLists.txt  CMakeUserPresets.json  Player.cpp  Player.h  README.md  icon.rc
include/: AnimationWindow.h  BgmControl.h  ButtonGroup.h  Card.h  CardPanel.h  Cards.h  CountDown.h  EndingPanel.h  GameControl.h  Loading.h  MainWindow.h  PlayHand.h  Player.h  Robot.h  RobotGrapLord.h  RobotPlayHand.h  ScorePanel.h  Strategy.h  UserPlayer.h  gamePanel.h  myButton.h
nodejs_api/: Gemini_api.js  LordGame_deepseek_api.js
resource/: LordGame.qrc
resource/conf/: music.json
resource/music/: defeat.m4s  snake.m4s  win.m4s
resource/stylesheet/: style.qss  style1.qss
src/: AnimationWindow.cpp  BgmControl.cpp  ButtonGroup.cpp  Card.cpp  CardPanel.cpp  Cards.cpp  CountDown.cpp  EndingPanel.cpp  GameControl.cpp  Loading.cpp  MainWindow.cpp  PlayHand.cpp  Player.cpp  Robot.cpp  RobotGrapLord.cpp  RobotPlayHand.cpp  ScorePanel.cpp  Strategy.cpp  UserPlayer.cpp  gamePanel.cpp  main.cpp  myButton.cpp
ui/: ButtonGroup.ui  MainWindow.ui  ScorePanel.ui  gamePanel.ui
